Minor layout fixes
- kills horizontal scroll
- adds copyright
- removes the dummy search from top navigation
- adds links to GitHub repository

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  padding: 60px 15px 0;
+  padding: 60px 0 0;
 }
 
 .App-logo {
